--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,18 +32,18 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      # - uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
+      - uses: pnpm/action-setup@v2 # Uncomment this if you're using pnpm
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@
       - name: Install dependencies
-        run: npm ci # or pnpm install / yarn install
+        run: pnpm install # or pnpm install / yarn install
       - name: Build with VitePress
         run: |
-          npm run docs:build # or pnpm docs:build / yarn docs:build
+          pnpm run docs:build # or pnpm docs:build / yarn docs:build
           touch docs/.vitepress/dist/.nojekyll
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
