--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           node-version: 18
       - name: Setup Pages
-        uses: actions/configure-pages@
+        uses: actions/configure-pages@v3
       - name: Install dependencies
         run: pnpm install # or pnpm install / yarn install
       - name: Build with VitePress
